CCD-1588 - fortify implementation